Allows for consul to be easily configured

--- a/templates/config.json.j2
+++ b/templates/config.json.j2
@@ -1,6 +1,1 @@
-{
-    "data_dir": "{{ consul.data_dir }}",
-    "enable_debug": {{ consul.enable_debug }},
-    "log_level": "{{ consul.log_level }}",
-    "server": {{ consul.server }}
-}
+{{ consul.settings | to_json }}
