--- a/templates/consul.conf.j2
+++ b/templates/consul.conf.j2
@@ -14,7 +14,7 @@ script
   export GOMAXPROCS=`nproc`
 
   # Get the public IP
-  BIND=`ifconfig eth0 | grep "inet addr" | awk '{ print substr($2,6) }'`
+  BIND=`ifconfig $BIND_INTERFACE | grep "inet addr" | awk '{ print substr($2,6) }'`
 
   exec /usr/local/bin/consul agent \
     -config-dir="/etc/consul.d" \
