--- a/templates/defaults.j2
+++ b/templates/defaults.j2
@@ -1,2 +1,2 @@
-CONSUL_FLAGS="{{ consul.startopts }}"
+CONSUL_STARTOPS="{{ consul.startopts }}"
 BIND_INTERFACE="{{ consul.bind_interface | default('eth0') }}"
