--- a/templates/consul.conf.j2
+++ b/templates/consul.conf.j2
@@ -16,9 +16,14 @@ script
   # Get the public IP
   BIND=`ifconfig $BIND_INTERFACE | grep "inet addr" | awk '{ print substr($2,6) }'`
 
+  #JOIN_STR=$( /usr/local/bin/aws_ips_autodiscover )
+
+  #[ -z "${JOIN_STR}" ] || exit 1
+
   exec /usr/bin/consul agent \
     -config-dir="{{ consul.directories.config_dir }}" \
     -bind=$BIND \
+    ${JOIN_STR} \
     ${CONSUL_STARTOPS} \
     >> {{ consul.directories.log_dir }}/consul.log 2>&1
 end script
