Adds leave on terminate option

--- a/templates/config.json.j2
+++ b/templates/config.json.j2
@@ -14,5 +14,6 @@
   "leave_on_terminate": {{ consul.settings.leave_on_terminate }},
   "log_level": "{{ consul.settings.log_level }}",
   "node_name": "{{ consul.settings.node_name }}",
+  "rejoin_after_leave": {{ consul.settings.rejoin_after_leave }},
   "server": {{ consul.settings.server }}
 }
