--- a/templates/defaults.j2
+++ b/templates/defaults.j2
@@ -1,6 +1,7 @@
-CONSUL_STARTOPS="{{ consul.startopts }}"
-BIND_INTERFACE="{{ consul.bind_interface | default('eth0') }}"
-{% if consul.aws_ips_autodiscover.enabled %}
+CONSUL_STARTOPS="{{ consul_startopts }}"
+BIND_INTERFACE="{{ consul_bind_interface | default('eth0') }}"
+CLIENT_INTERFACE="{{ consul_client_interface | default('eth0') }}"
+{% if consul_aws_ips_autodiscover_enabled %}
 JOIN_STR="$( /usr/local/bin/aws_ips_autodiscover )"
 {% else %}
 JOIN_STR=""
