--- a/templates/defaults.j2
+++ b/templates/defaults.j2
@@ -1,8 +1,12 @@
-CONSUL_STARTOPS="{{ consul_startopts }}"
-BIND_INTERFACE="{{ consul_bind_interface | default('eth0') }}"
-CLIENT_INTERFACE="{{ consul_client_interface | default('eth0') }}"
 {% if consul_aws_ips_autodiscover_enabled %}
 JOIN_STR="$( /usr/local/bin/aws_ips_autodiscover )"
 {% else %}
 JOIN_STR=""
 {% endif %}
+BIND=$( ifconfig "{{ consul_bind_interface | default('eth0') }}" \
+  | grep "inet addr" \
+  | awk '{ print substr($2,6) }' )
+CLIENT=$( ifconfig "{{ consul_client_interface | default('eth0') }}" \
+  | grep "inet addr" \
+  | awk '{ print substr($2,6) }' )
+CONSUL_STARTOPS="-config-dir={{ consul_directories_config_dir }} -bind=${BIND} -client=${CLIENT} ${JOIN_STR} {{ consul_startopts }}"
